--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "prod":"next build && next start",
+    "prod": "next build && next start",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-day-picker": "^9.3.0",
     "react-dom": "^18"
   },
   "devDependencies": {
